--- a/src/index.css
+++ b/src/index.css
@@ -461,6 +461,137 @@ TESTING PAGE
   animation-delay: 0.4s;
 }
 
+/*
+
+RESULT PAGE
+
+*/
+
+.upload-options-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 18rem;
+  width: 100%;
+}
+
+.upload-option {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 350px;
+  height: 350px;
+}
+
+.upload-option.placeholder {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+.upload-option .rotating-square {
+  position: absolute;
+  border: 2px dotted #999;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.upload-option .rotating-square.outer {
+  width: 100%;
+  height: 100%;
+  animation-name: rotate-fast;
+  animation-duration: 40s;
+  opacity: 0.4;
+}
+
+.upload-option .rotating-square.middle {
+  width: 85%;
+  height: 85%;
+  animation-name: rotate-medium;
+  animation-duration: 50s;
+  opacity: 0.7;
+}
+
+.upload-option .rotating-square.inner {
+  width: 70%;
+  height: 70%;
+  animation-name: rotate-slow;
+  animation-duration: 60s;
+  opacity: 1;
+}
+
+
+.upload-option .dotted-square {
+  width: 200px;
+  height: 200px;
+  transform: rotate(45deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease;
+  z-index: 5;
+}
+
+.upload-icon {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+  transition: transform 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.upload-option:not(.placeholder) .upload-icon:hover {
+  transform: translate(-50%, -50%) rotate(-45deg) scale(1.08);
+}
+
+.upload-label {
+  position: absolute;
+  width: 120px;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 0.05em;
+  line-height: 1.4;
+  z-index: 10;
+}
+
+.camera-label {
+  top: 12%;
+  right: -15%;
+  text-align: left;
+}
+
+.gallery-label {
+  bottom: 12%;
+  left: -15%;
+  text-align: right;
+}
+
+.line-svg {
+  position: absolute;
+  z-index: 9;
+  width: 100px; /* Adjust size as needed */
+  transform: rotate(180deg);
+}
+
+.camera-line {
+  top: 20%;
+  right: 20%;
+}
+
+.gallery-line {
+  bottom: 20%;
+  left: 20%;
+}
+
+/* 
+
+ANIMATIONS
+
+*/
+
 @keyframes jump {
   0%, 80%, 100% {
     transform: translateY(0);
@@ -507,7 +638,7 @@ MEDIA QUERIES
     display: none;
   }
 
-  home-container {
+  .home-container {
     justify-content: center;
     align-items: center;
     padding: 2rem; 
@@ -582,7 +713,31 @@ MEDIA QUERIES
   .card-link:hover {
     transform: scale(1.1);
   }
+
+  .upload-options-wrapper {
+    flex-direction: column;
+    gap: 6rem;
+  }
+  .upload-label {
+    position: static;
+    transform: none;
+    width: 140px;
+    text-align: center;
+    margin-top: 1.5rem;
+  }
+
+  .line-svg {
+    display: none;
+  }
 }
+
+@media (min-width: 768px) {
+  .upload-icon {
+    width: 136px;
+    height: 136px;
+  }
+}
+
 @media (max-width: 640px) {
   .large-dotted-square {
     width: 320px; 
